--- a/Project/SecurityMaster/SecMaster_DAL/SecMaster_DAL.csproj
+++ b/Project/SecurityMaster/SecMaster_DAL/SecMaster_DAL.csproj
@@ -47,6 +47,7 @@
     <Compile Include="JsonData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security.cs" />
+    <Compile Include="SecurityAttribute.cs" />
     <Compile Include="SecurityCollection.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
