--- a/Project/SecurityMaster/SecurityReader/SecurityReader.csproj
+++ b/Project/SecurityMaster/SecurityReader/SecurityReader.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SecMaster_DAL, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\SecMaster_DAL\bin\Debug\SecMaster_DAL.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,12 +49,6 @@
     <Compile Include="FileReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecurityReader.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SecMaster_DAL\SecMaster_DAL.csproj">
-      <Project>{3ABEAF6C-164C-4DE2-BF24-58C8A48A8C24}</Project>
-      <Name>SecMaster_DAL</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
